<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/duracao_total_title" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="wrap_content"
                        style="@style/divider" />

                    <TextView
                        android:id="@+id/duracao_total"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duracao_total_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/duracao_media_title" />

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="wrap_content"
                        style="@style/divider" />

                    <TextView
                        android:id="@+id/duracao_media"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duracao_media_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/track_maior_title" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="wrap_content"
                        style="@style/divider" />

                    <TextView
                        android:id="@+id/track_maior"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_maior_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/track_menor_title" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="wrap_content"
                        style="@style/divider" />

                    <TextView
                        android:id="@+id/track_menor"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_menor_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Title_Statistitcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/top_artistas" />

                <View
                    android:id="@+id/divider4"
                    style="@style/divider"
                    android:layout_width="100dp" />

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/top_artistas"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Title_Statistitcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/top_albums" />

                <View
                    android:id="@+id/divider5"
                    style="@style/divider"
                    android:layout_width="100dp" />

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/top_albums"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/mood_playlist_title" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="wrap_content"
                        style="@style/divider"/>

                    <TextView
                        android:id="@+id/mood"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_playlist_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/Title_Statistitcs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/ritmo_playlist_title" />

                    <View
                        android:id="@+id/divider7"
                        android:layout_width="wrap_content"
                        style="@style/divider"/>

                    <TextView
                        android:id="@+id/ritmo"
                        style="@style/Text_Statistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ritmo_playlist_text" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Title_Statistitcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/top_generos" />

                <View
                    android:id="@+id/divider8"
                    style="@style/divider"
                    android:layout_width="100dp" />

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/top_generos"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
            <include layout="@layout/last_sync"></include>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
